added the middle initial

--- a/Lesson3_Assignment/index.html
+++ b/Lesson3_Assignment/index.html
@@ -17,7 +17,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Samantha Ranscht</title>
+    <title>Samantha H Ranscht</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
